# searchme

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yml  file_indexer.py  llm_orchestrator.py  main.py  requirements.txt  setup.cfg  setup.py
searchme/: cli.py  main.py
