[metadata]
name = searchme
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = A conversational file search system with AI capabilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/searchme
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.10
install_requires =
    faiss-cpu
    sentence-transformers
    requests
    numpy
    python-magic
    mutagen
    Pillow
    PyPDF2
    python-docx
    tqdm
    pdfminer.six

[options.entry_points]
console_scripts =
    searchme = searchme.cli:main

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist
extend-ignore = E203

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = -v --cov=searchme

[coverage:run]
source = searchme

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if __name__ == .__main__.: 